--- a/stylekalkulator.css
+++ b/stylekalkulator.css
@@ -1,321 +1,309 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  font-family: "Poppins", sans-serif;
+
+
+.grid {
+  display: grid;
+  gap: 1rem;
 }
 
-body {
+.grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.flex {
   display: flex;
+}
+
+.items-center {
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  width: 100%;
-  overflow: visible;
-  background: url(/assets/images/bg.jpeg) no-repeat center fixed;
-}
-::selection {
-  color: #fff;
-  background: linear-gradient( #09c778, #01a0f9);
-}
-.container {
-  width: 800px;
-  position: relative;
-  background: #fff;
-  text-align: center;
-  border-radius: 5px;
-  padding: 2px 35px 2px 35px;
-}
-.container header {
-  font-size: 25px;
-  font-weight: 600;
-  margin: 0 0 15px 0;
-}
-.container .form-outer {
-  width: 100%;
-  overflow: hidden;
-}
-.container .form-outer form {
-  display: flex;
-  width: 400%;
-}
-.form-outer form .page {
-  width: 25%;
-  transition: margin-left 0.3s ease-in-out;
-  /* margin-top: -5px; */
-}
-.form-outer form .page .title {
-  text-align: left;
-  font-size: 18px;
-  font-weight: 450;
-}
-.form-outer form .page .field {
-  width: 800px;
-  height: 15px;
-  margin: 20px 0;
-  display: row;
-  position: relative;
-}
-.form-outer form .page .field-pph {
-  width: 800px;
-  height: 5px;
-  margin: 18px 0;
-  display: row;
-  position: relative;
-}
-form .page .field .label {
-  font-weight: 600;
-  font-size: 11px;
-  float: left;
-  width: 30%;
-  display: inline-block;
-  text-align: left;
-}
-form .page .field .label-long {
-  font-weight: 600;
-  font-size: 12px;
-  float: left;
-  width: 70%;
-  display: inline-block;
-  text-align: left;
-}
-form .page .field-pph .label-pph {
-  font-weight: 600;
-  font-size: 11px;
-  float: left;
-  width: 70%;
-  display: inline-block;
-  text-align: left;
-  line-height: 15px;
-  height: 5px;
-  padding: 2px 2px 0 2px;
-}
-form .page .field .col-75 {
-  float: left;
-  padding-left: 10%;
-  width: 19%;
-}
-form .page .field-pph input {
-  border: 1px solid lightgrey;
-  font-size: 12px;
-  width: 20%;
-  float: right;
-}
-form .page .field input {
-  height: 100%;
-  width: 100%;
-  border: 1px solid lightgrey;
-  padding-left: 15px;
-  padding-right: 1%;
-  font-size: 12px;
-  float: right;
-}
-form .page .field .label-radio {
-  margin-top: -4px;
-  float: left !important;
-}
-form .page .field .radio {
-  height: 100%;
-  width: 8%;
-  margin-left: 50px;
-  float: left !important;
-}
-form .page .field select {
-  font-size: 17px;
-  font-weight: 500;
-  margin-left: 8%;
-}
-form .page .field .select {
-  float: left;
-  padding-left: 1%;
-  width: 60%;
-}
-form .page .field .select-month {
-  font-weight: 500;
-  float: left;
-  padding-left: 6%;
-  width: 25%;
-  display: inline-block;
-  text-align: left;
-}
-form .page .field .select-month .form-control-select {
-  width: 96%;
-}
-.form-outer form .page .field .firstNext {
-  margin: 2% 0;
-  width: 60%;
-  float: right;
-  margin-right: 2%;
-}
-.form-outer form .page .btns {
-  width: 800px;
-  height: 15px;
-  margin: 30px 0;
-  display: row;
-  position: relative;
-}
-form .page .btns button {
-  margin-top: -15px !important;
-  width: 48% !important;
-}
-form .page .field button {
-  width: 100%;
-  height: calc(100% + 10px);
-  border: none;
-  background: linear-gradient( #09c778, #01a0f9);
-  margin-top: -15px;
-  border-radius: 3px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: 0.5s ease;
-}
-form .page .field button:hover {
-  background: #000;
 }
 
-form .page .btns button.prev {
-  margin-right: 1%;
-  font-size: 17px;
+.justify-center {
+  justify-content: center;
 }
-form .page .btns button.next {
-  margin-left: 1%;
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
-.container .progress-bar {
-  display: flex;
-  margin: 15px 0;
-  user-select: none;
+
+.font-inter {
+font-family: 'Inter', sans-serif;
+text-align: center;
 }
-.container .progress-bar .step {
+
+
+.font-bold {
+  font-weight: bold;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+}
+
+.leading-5 {
+  line-height: 2;
+}
+
+.text-green-500 {
+  color: #48bb78;
+}
+
+.text-gray-800 {
+  color: #2d3748;
+}
+
+.text-center {
   text-align: center;
+}
+
+.dark\\:text-white {
+  color: #ffffff;
+}
+
+.text-blue-600 {
+  color: #3182ce;
+}
+
+.dark\\:text-blue-500 {
+  color: #4299e1;
+}
+
+.after\\:content-\\\\\\\\::after {
+  content: '';
+}
+
+.after\\:w-full::after {
   width: 100%;
-  position: relative;
 }
-.container .progress-bar .step p {
-  font-weight: 500;
-  font-size: 15px;
-  color: #000;
-  margin-bottom: 5px;
+
+.after\\:h-1::after {
+  height: 0.25rem;
 }
-.progress-bar .step .bullet {
-  height: 25px;
-  width: 25px;
-  border: 2px solid #000;
-  display: inline-block;
-  border-radius: 50%;
-  position: relative;
-  transition: 0.2s;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 25px;
+
+.after\\:border-b::after {
+  border-bottom: 1px solid;
 }
-.progress-bar .step .bullet.active {
-  border-color: linear-gradient( #09c778, #01a0f9);
-  background: linear-gradient( #09c778, #01a0f9);
+
+.after\\:border-gray-200::after {
+  border-color: #edf2f7;
 }
-.progress-bar .step .bullet span {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+
+.after\\:border-1::after {
+  border-width: 1px;
 }
-.progress-bar .step .bullet.active span {
+
+.after\\:hidden::after {
   display: none;
 }
-.progress-bar .step .bullet:before,
-.progress-bar .step .bullet:after {
-  position: absolute;
-  content: "";
-  bottom: 11px;
-  right: -395px;
-  height: 3px;
-  width: 393px;
-  background: #262626;
+
+.sm\\:after\\:inline-block::after {
+  display: inline-block;
 }
+
+.after\\:mx-6::after {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.xl\\:after\\:mx-10::after {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.dark\\:after\\:border-gray-700::after {
+  border-color: #4a5568;
+}
+
+.horizontal-line {
+position: absolute;
+width: 100%; /* atau lebar yang Anda inginkan */
+height: 1px; /* atau tinggi yang Anda inginkan */
+border-bottom: 2px solid #48bb78;
+}
+
+.rumah {
+margin-left: auto;
+margin-top: -45px;
+margin-right:50px;
+}
+
+.font-inter.text-lg {
+font-size: 0.675rem; /* Sesuaikan dengan ukuran yang diinginkan */
+}        
+.field {
+display: flex;
+justify-content: space-between;
+color :#325A44;
+}
+
+.field btns{
+background-color: #325A44; /* Warna hijau */
+border: none;
+color: white;
+padding: 10px 24px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+border-radius: 4px;
+margin-right:100px;
+}
+
+.firstNext:hover {
+background-color: #45a049; /* Warna hijau yang sedikit lebih gelap saat hover */
+}
+
+/* body {
+overflow-y:; 
+} */
+
+html, body {
+height: 100%;
+margin: 0;
+}
+
+/* Untuk elemen tertentu yang ingin tetap di posisi tertentu */
+.header {
+position: fixed;
+top: 0;
+width: 100%;
+}
+
+.footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+}
+/* Atur opacity menjadi 0 agar gambar tersembunyi */
+#profile-pic {
+opacity: 0;
+transition: opacity 0.5s ease-in-out; /* Animasi transisi opacity */
+}
+
+/* Atur opacity menjadi 1 saat gambar ditampilkan */
+#profile-pic.show {
+opacity: 1;
+}
+.grid-radio {
+display: grid;
+grid-template-columns: repeat(2, max-content);
+align-items: center; /* Memposisikan elemen secara vertikal di tengah */
+gap: 8rem; /* Jarak antara elemen */
+}
+
+.grid-radio input[type="radio"] {
+margin: 20px; /* Menghilangkan margin bawaan */
+}
+
+.page {
+  margin-left: 500px;
+  margin-right: 200px;
+}
+.title{
+font-weight:600;
+color:#325A44;
+}
+
+.firstNext.next{
+  background-color: #289C5E; /* Warna hijau */
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: 360px;
+  margin-left: -350px;
+}
+.btns .firstNext.next:hover {
+  background-color: #45a049; /* Warna hijau yang sedikit lebih gelap saat hover */
+}
+
+.field.btns {
+display: flex;
+justify-content: flex-end;
+}
+
+.field-pph{
+  display: flex;
+  justify-content: space-between;
+  color :#325A44;
+}
+
+.halo2{
+  background-color: #289C5E; /* Warna hijau */
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: -10px;
+  margin-left: 20px;
+  }
+  
+  .halo:hover {
+  background-color: #45a049; /* Warna hijau yang sedikit lebih gelap saat hover */
+  }
+
+  .halo3{
+    background-color: #289C5E; /* Warna hijau */
+    border: none;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: -10px;
+    margin-left: 20px;
+    }
+    
+    .halo:hover {
+    background-color: #45a049; /* Warna hijau yang sedikit lebih gelap saat hover */
+    }
+
+    @keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+
 .progress-bar .step .bullet.active:after {
   background: linear-gradient( #09c778, #01a0f9);
   transform: scaleX(0);
   transform-origin: left;
   animation: animate 0.3s linear forwards;
 }
-@keyframes animate {
-  100% {
-    transform: scaleX(1);
-  }
-}
-.progress-bar .step:last-child .bullet:before,
-.progress-bar .step:last-child .bullet:after {
-  display: none;
-}
-.progress-bar .step p.active {
-  color: linear-gradient( #09c778, #01a0f9);
-  transition: 0.2s linear;
-}
-.progress-bar .step .check {
+.progress-bar .step .bullet span {
   position: absolute;
   left: 50%;
-  top: 65%;
-  font-size: 15px;
-  transform: translate(-50%, -50%);
-  display: none;
-}
-header .arrow {
-  position: relative;
-  float: left;
-  color: linear-gradient( #09c778, #01a0f9);
-  background-color: #fff;
-  border-radius: 50%;
-}
-header .arrow:hover {
-  color: #000;
-  background-color: #fff;
-}
-.progress-bar .step .check.active {
-  display: block;
-  color: #fff;
+  transform: translateX(-50%);
 }
 
-.form-control[disabled],
-.form-control[readonly],
-fieldset[disabled] .form-control {
-  cursor: not-allowed;
-  background-color: #eee;
-  opacity: 1;
-}
-
-.visually-hidden {
-  display: none;
-}
-
-.page-skema {
-  margin-bottom: 40px;
-}
-
-.page-skema .field {
-  width: 800px;
-  height: 15px;
-  margin: 20px 200px;
-  display: row;
-  position: relative;
-}
-
-.page-skema .field .label {
-  font-weight: 600;
-  font-size: 11px;
-  float: left;
-  width: 30%;
-  display: inline-block;
-  text-align: left;
-}
-
-.page-skema .field .select {
-  font-size: 17px;
-  font-weight: 500;
-  margin-left: 8%;
-  float: left;
-  padding-left: 1%;
-  width: 60%;
+.page:nth-child(2),
+.page:nth-child(3) {
+    display: none;
 }
