--- a/stylekalkulator.css
+++ b/stylekalkulator.css
@@ -15,72 +15,98 @@ body {
   overflow: visible;
   background: url(/assets/images/bg.jpeg) no-repeat center fixed;
 }
-::selection {
-  color: #fff;
-  background: linear-gradient( #09c778, #01a0f9);
-}
+
 .container {
-  width: 800px;
+  width: 100%;
   position: relative;
   background: #fff;
   text-align: center;
   border-radius: 5px;
-  padding: 2px 35px 2px 35px;
+  padding: 0;
+  margin: 0;
 }
+
+hr {  /*garis horizontal*/
+  width: 100%;
+  border: none;
+  height: 1px;
+  background-color: green;
+}
+
 .container header {
   font-size: 25px;
   font-weight: 600;
   margin: 0 0 15px 0;
 }
+
 .container .form-outer {
   width: 100%;
   overflow: hidden;
 }
+
 .container .form-outer form {
   display: flex;
   width: 400%;
 }
+
 .form-outer form .page {
   width: 25%;
+  margin-left: 150px; /*ubah item jadi ke kanan di pegawai tetap */
   transition: margin-left 0.3s ease-in-out;
   /* margin-top: -5px; */
 }
+
 .form-outer form .page .title {
   text-align: left;
   font-size: 18px;
   font-weight: 450;
 }
-.form-outer form .page .field {
+
+.form-outer form .page .field { /*pegawai tetap bulanan */
   width: 800px;
   height: 15px;
   margin: 20px 0;
   display: row;
-  position: relative;
 }
-.form-outer form .page .field-pph {
+
+/*.form-outer form .page .field-pph {
   width: 800px;
   height: 5px;
   margin: 18px 0;
   display: row;
   position: relative;
-}
+}*/
+
 form .page .field .label {
   font-weight: 600;
   font-size: 11px;
   float: left;
-  width: 30%;
+  width: 30%;  /* ptkp di masa pajak terakhir */
   display: inline-block;
   text-align: left;
+  margin-top: 3%;
 }
-form .page .field .label-long {
-  font-weight: 600;
-  font-size: 12px;
+
+form .page .field .label1 {
+  font-weight: 500;
+  font-size: 15px;
+  float: left;
+  width: 30%;  /* ptkp */
+  display: inline-block;
+  text-align: left;
+  /* color: green; */
+}
+
+/*form .page .field .label-long {
+  font-weight: 500;
+  font-size: 15px;
   float: left;
   width: 70%;
   display: inline-block;
   text-align: left;
-}
-form .page .field-pph .label-pph {
+}*/
+
+/*form .page .field-pph .label-pph {
   font-weight: 600;
   font-size: 11px;
   float: left;
@@ -90,47 +116,55 @@ form .page .field-pph .label-pph {
   line-height: 15px;
   height: 5px;
   padding: 2px 2px 0 2px;
-}
-form .page .field .col-75 {
+}*/
+
+/*form .page .field .col-75 {
   float: left;
   padding-left: 10%;
   width: 19%;
-}
-form .page .field-pph input {
+}*/
+
+/*form .page .field-pph input {
   border: 1px solid lightgrey;
   font-size: 12px;
   width: 20%;
   float: right;
-}
-form .page .field input {
+}*/
+
+form .page .field input { /* content bruto sampai pph 21 */
   height: 100%;
   width: 100%;
   border: 1px solid lightgrey;
-  padding-left: 15px;
   padding-right: 1%;
   font-size: 12px;
   float: right;
+  border: 1px solid green; 
+  border-radius: 5px; 
 }
-form .page .field .label-radio {
+
+/*form .page .field .label-radio {
   margin-top: -4px;
   float: left !important;
-}
-form .page .field .radio {
+}*/
+
+/*form .page .field .radio {
   height: 100%;
   width: 8%;
   margin-left: 50px;
   float: left !important;
-}
-form .page .field select {
+}*/
+
+form .page .field select { /* kolom input ptkp */
   font-size: 17px;
   font-weight: 500;
   margin-left: 8%;
-}
-form .page .field .select {
   float: left;
   padding-left: 1%;
   width: 60%;
+  border: 1px solid green; 
+  border-radius: 5px; 
 }
+
 form .page .field .select-month {
   font-weight: 500;
   float: left;
@@ -139,32 +173,55 @@ form .page .field .select-month {
   display: inline-block;
   text-align: left;
 }
+
 form .page .field .select-month .form-control-select {
   width: 96%;
 }
+
 .form-outer form .page .field .firstNext {
   margin: 2% 0;
   width: 60%;
   float: right;
   margin-right: 2%;
+  margin-top: 15%; /*ubah button jadi ke bawah di pegawai tetap tahunan*/
 }
+
 .form-outer form .page .btns {
   width: 800px;
   height: 15px;
-  margin: 30px 0;
+  margin-right: 10%;
   display: row;
   position: relative;
 }
-form .page .btns button {
+
+.form-outer form .page .btns .next-1{
+  width: 800px;
+  height: 25px;
+  margin-right: 11%;
+  display: row;
+  position: relative;
+}
+
+.form-outer form .page .btns .reset{
+  width: 800px;
+  height: 25px;
+  margin-right: 11%;
+  display: row;
+  position: relative;
+}
+
+/*form .page .btns button {
   margin-top: -15px !important;
   width: 48% !important;
-}
+}*/
+
 form .page .field button {
   width: 100%;
   height: calc(100% + 10px);
   border: none;
   background: linear-gradient( #09c778, #01a0f9);
-  margin-top: -15px;
+  margin-top: 20px;
+  margin-right: 10%; 
   border-radius: 3px;
   color: #fff;
   cursor: pointer;
@@ -174,33 +231,39 @@ form .page .field button {
   text-transform: uppercase;
   transition: 0.5s ease;
 }
+
 form .page .field button:hover {
   background: #000;
 }
 
-form .page .btns button.prev {
-  margin-right: 1%;
+/* form .page .btns button.prev { 
+  margin-left: 0.5%;
   font-size: 17px;
-}
-form .page .btns button.next {
-  margin-left: 1%;
-}
+}*/
+
+/*form .page .btns button.next {
+  margin-right: 0.5%;
+}*/
+
 .container .progress-bar {
   display: flex;
   margin: 15px 0;
   user-select: none;
 }
+
 .container .progress-bar .step {
   text-align: center;
   width: 100%;
   position: relative;
 }
+
 .container .progress-bar .step p {
   font-weight: 500;
   font-size: 15px;
   color: #000;
   margin-bottom: 5px;
 }
+
 .progress-bar .step .bullet {
   height: 25px;
   width: 25px;
@@ -213,18 +276,22 @@ form .page .btns button.next {
   font-size: 17px;
   line-height: 25px;
 }
+
 .progress-bar .step .bullet.active {
   border-color: linear-gradient( #09c778, #01a0f9);
   background: linear-gradient( #09c778, #01a0f9);
 }
+
 .progress-bar .step .bullet span {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
+
 .progress-bar .step .bullet.active span {
   display: none;
 }
+
 .progress-bar .step .bullet:before,
 .progress-bar .step .bullet:after {
   position: absolute;
@@ -235,25 +302,30 @@ form .page .btns button.next {
   width: 393px;
   background: #262626;
 }
+
 .progress-bar .step .bullet.active:after {
   background: linear-gradient( #09c778, #01a0f9);
   transform: scaleX(0);
   transform-origin: left;
   animation: animate 0.3s linear forwards;
 }
+
 @keyframes animate {
   100% {
     transform: scaleX(1);
   }
 }
+
 .progress-bar .step:last-child .bullet:before,
 .progress-bar .step:last-child .bullet:after {
   display: none;
 }
+
 .progress-bar .step p.active {
   color: linear-gradient( #09c778, #01a0f9);
   transition: 0.2s linear;
 }
+
 .progress-bar .step .check {
   position: absolute;
   left: 50%;
@@ -262,6 +334,7 @@ form .page .btns button.next {
   transform: translate(-50%, -50%);
   display: none;
 }
+
 header .arrow {
   position: relative;
   float: left;
@@ -269,10 +342,12 @@ header .arrow {
   background-color: #fff;
   border-radius: 50%;
 }
+
 header .arrow:hover {
   color: #000;
   background-color: #fff;
 }
+
 .progress-bar .step .check.active {
   display: block;
   color: #fff;
@@ -297,14 +372,15 @@ fieldset[disabled] .form-control {
 .page-skema .field {
   width: 800px;
   height: 15px;
-  margin: 20px 200px;
+  margin: 20px 350px;
   display: row;
   position: relative;
 }
 
 .page-skema .field .label {
-  font-weight: 600;
-  font-size: 11px;
+  font-weight: 500;
+  font-size: 15px;
+  /* color: green; */
   float: left;
   width: 30%;
   display: inline-block;
@@ -318,4 +394,133 @@ fieldset[disabled] .form-control {
   float: left;
   padding-left: 1%;
   width: 60%;
+  border: 1px solid green; 
+  border-radius: 5px; 
+}
+
+
+/* Pegawai Tetap */
+
+/* pegawai tetap bulanan */
+
+form .slide-page2 .input-col-75 {
+  width: 80%; 
+  margin-right: 10px;
+}
+
+form .slide-page2 .field .input-col-75 input {
+  width: 40%;
+  font-size: 15px;
+  box-sizing: border-box; 
+}
+
+.title1 {
+  text-align: left;
+  font-size: 18px; 
+  font-weight: 600; 
+  margin-bottom: 35px; 
+  margin-top: 20px;
+  color: green;
+}
+
+.title2 {
+  text-align: left;
+  font-size: 18px; 
+  font-weight: 600; 
+  margin-top: 40px;
+  color: green;
+}
+
+.form-outer .slide-page .field .label2 {
+  text-align: left;
+  font-size: 15px; 
+  font-weight: 500; 
+  /* margin-bottom: 100%;  */
+}
+
+/* pegawai tetap tahunan */
+.form-outer .slide-page {
+  margin-left: 90px;
+}
+.form-outer .slide-page .field .label {
+  text-align: left;
+  font-size: 15px; 
+  font-weight: 500; 
+  margin-bottom: 20px; 
+  /* color: green;  */
+}
+
+.form-outer form .page .title {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 450;
+  /*color: green; */
+}
+
+form .page .field .label-long {
+  font-weight: 500;
+  font-size: 15px;
+  float: left;
+  width: 70%;
+  display: inline-block;
+  text-align: left;
+  /* color: green; */
+}
+
+/* Pegawai Tidak Tetap */
+
+.form-outer {
+  margin-left: 200px; /* ubah item ke kanan di pegawai tidak tetap */
+  margin-bottom: 50px;
+}
+
+form .field {
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 20px; 
+}
+
+form .slide-page2 .field .label-long {
+  font-weight: 500;
+  font-size: 15px; 
+  width: 20%; 
+  text-align: left; 
+  display: inline-block;
+  /* color: green; */
+}
+
+form .slide-page2 .field .label {
+  font-weight: 500;
+  font-size: 15px; 
+  text-align: left; 
+  /* color: green; */
+}
+
+form .slide-page2 .field .col-75 {
+  width: 80%; 
+  margin-right: 20px;
+}
+
+form .slide-page2 .field .col-75 input {
+  width: 40%;
+  font-size: 15px;
+  box-sizing: border-box; 
+}
+
+form button.hitung {
+  width: 80px;
+  height: 30px;
+  border: none;
+  background: linear-gradient(#09c778, #01a0f9);
+  margin-top: 30px;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: 0.5s ease;
+  display: block;
+  margin-left: 700px; 
 }
